# terraform-aws-serverless-beacon

./: .gitignore  .terraform.lock.hcl  LICENSE  README.md  THIRDPARTY  api-admin.tf  api-analyses.tf  api-analytics.tf  api-askbeacon.tf  api-biosamples.tf  api-cohorts.tf  api-configuration.tf  api-datasets.tf  api-entry-types.tf  api-filtering-terms.tf  api-genomics-variants.tf  api-index.tf  api-individuals.tf  api-map.tf  api-resource-info.tf  api-runs.tf  api-submit-cohort.tf  api-submit-dataset.tf  api.tf  athena-caches.tf  athena.tf  backend.tf.template  build_cpp.sh  build_cpp2.sh  cognito.tf  docker_images.tf  dynamodb-dynamic-consent.tf  dynamodb.tf  iam.tf  init.sh  lambda.tf  layers.tf  main.tf  mvn-settings.xml  openapi.yaml  (+9 more)
.devcontainer/: devcontainer.json
build-executables/: Dockerfile
docker/: Dockerfile  requirements.txt
docs/: AUTH-GUIDE.md  INGESTION-GUIDE.md  USAGE-GUIDE.md
examples/full/: backend.tf  main.tf  outputs.tf
examples/minimum/: main.tf  outputs.tf
examples/test-data/: GUIDE.md  chr1.vcf.gz.tbi  submission.json
lambda/admin/: admin_functions.py  admin_utils.py  lambda_function.py
lambda/analytics/: .gitginore  Dockerfile  analytics_functions.py  analytics_utils.py  docker_prep.py  lambda_function.py  requirements.txt  util.py  variant_correlations.py  variant_frequencies.py
lambda/askbeacon/: .hash.txt  Dockerfile  analytics.py  ask.py  askbeacon_utils.py  docker_prep.py  index.py  lambda_function.py  models.py  requirements.txt  templates.py
lambda/athenaUdfs/: .gitignore  pom.xml
lambda/duplicateVariantSearch/source/: CMakeLists.txt  duplicateVariantSearch.cpp  duplicateVariantSearch.hpp  main.cpp  readVcfData.cpp  readVcfData.hpp  thread.hpp
lambda/getAnalyses/: lambda_function.py  responses.py  route_analyses.py  route_analyses_filtering_terms.py  route_analyses_id.py  route_analyses_id_g_variants.py  schemas
lambda/getBiosamples/: dynamodb  lambda_function.py  route_biosamples.py  route_biosamples_filtering_terms.py  route_biosamples_id.py  route_biosamples_id_analyses.py  route_biosamples_id_g_variants.py  route_biosamples_id_runs.py
lambda/getCohorts/: athena  lambda_function.py  requestParameters.json  route_cohorts.py  route_cohorts_id.py  route_cohorts_id_filtering_terms.py  route_cohorts_id_individuals.py
lambda/getConfiguration/: lambda_function.py
lambda/getDatasets/: lambda_function.py  route_datasets.py  route_datasets_filtering_terms.py  route_datasets_id.py  route_datasets_id_biosamples.py  (+3 more)
lambda/shared/gzip/: CMakeLists.txt  gzip.cpp  gzip.hpp
lambda/shared/source/: CMakeLists.txt  awsutils.cpp  awsutils.hpp  generalutils.cpp  generalutils.hpp
lambda/summariseSlice/source/: CMakeLists.txt  GzipReader.h  constants.h  downloader.h  fast_atoi.h  initDuplicateVariantSearch.cpp  initDuplicateVariantSearch.hpp  main.cpp  stopwatch.h  vcf_chunk_reader.h  write_data_to_s3.h
shared_resources/: api_response.py  chrom_matching.py  entries.py  lambda_payloads.py  lambda_utils.py  pynamo_mappings.py  responses.py  submitDataset-schema-new.json  tabix
simulations/:  __init__.py  USER_GUIDE.md  analyses.py  athena  biosamples.py  cohorts.py  datasets.py  dynamodb  individuals.py  runs.py  simulate.py  simulate.sh  test.py  utils.py  vcf.txt.example
(+325 files in other folders)
